--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,12 @@
     <title>Embed Twitter Profile</title>
     
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./stylesheets/index.css" />
+    <link rel="stylesheet" href="./stylesheets/header.css" />
+    <link rel="stylesheet" href="./stylesheets/profileCard.css" />
+    <link rel="stylesheet" href="./stylesheets/snippet.css" />
+    <link rel="stylesheet" href="./stylesheets/footer.css" />
+    <link rel="stylesheet" href="./stylesheets/mediaQuery.css" />
   </head>
   <body>
     <div class="wrapper">
