made widget profile card responsive with match media in JS

--- a/client/index.html
+++ b/client/index.html
@@ -65,5 +65,6 @@
     </div>
 
     <script src="./script.js"></script>
+    <!-- <script id="embed-script" src="./widget.js" data-user="stephsmithio"></script> -->
   </body>
 </html>
