added meta tags for SEO and social cards

--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Embed Twitter Profile</title>
+    <title>Embeddable Twitter Profile || SwastikJsDev</title>
+
+    <!-- meta tags for SEO and social sharing -->
+    <link rel="canonical" href="https://embed-twitter-profile.herokuapp.com/" />
+    <meta name="description" content="A simple tool to help you embed your twitter profile on your personal websites." />
+    <meta name="robots" content="index,follow" />
+    <meta property="og:title" content="Embeddabale Twitter Profile" />
+    <meta property="og:type" content="Software" />
+    <meta property="og:url" content="https://embed-twitter-profile.herokuapp.com/" />
+    <meta property="og:description" content="A simple tool to help you embed your twitter profile on your personal websites." />
+    <meta property="og:image" content="https://pbs.twimg.com/media/E1xFeytVkAEKSeq?format=jpg&name=large" />
+    <meta name="twitter:card" content="A simple tool to help you embed your twitter profile on your personal websites." />
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="https://pbs.twimg.com/profile_images/1393646619686363137/3WIKSgYQ_400x400.jpg"/>
+
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="./stylesheets/index.css" />
     <link rel="stylesheet" href="./stylesheets/header.css" />
