Fix Twitter card properties

--- a/client/index.html
+++ b/client/index.html
@@ -8,14 +8,14 @@
 
     <!-- meta tags for SEO and social sharing -->
     <link rel="canonical" href="https://embed-twitter-profile.herokuapp.com/" />
-    <meta name="description" content="A simple tool to help you embed your twitter profile on your personal websites." />
+    <meta name="description" content="A simple tool to help you embed your Twitter profile on your personal websites." />
     <meta name="robots" content="index,follow" />
-    <meta property="og:title" content="Embeddabale Twitter Profile" />
+    <meta property="og:title" content="Embeddable Twitter Profile" />
     <meta property="og:type" content="Software" />
     <meta property="og:url" content="https://embed-twitter-profile.herokuapp.com/" />
-    <meta property="og:description" content="A simple tool to help you embed your twitter profile on your personal websites." />
+    <meta property="og:description" content="A simple tool to help you embed your Twitter profile on your personal websites." />
     <meta property="og:image" content="https://pbs.twimg.com/media/E1xFeytVkAEKSeq?format=jpg&name=large" />
-    <meta name="twitter:card" content="A simple tool to help you embed your twitter profile on your personal websites." />
+    <meta name="twitter:card" content="summary_large_image" />
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="https://pbs.twimg.com/profile_images/1393646619686363137/3WIKSgYQ_400x400.jpg"/>
