--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Embeddable Twitter Profile || SwastikJsDev</title>
+    <title>TwEmbed || SwastikYadav</title>
 
     <!-- meta tags for SEO and social sharing -->
     <link rel="canonical" href="https://embed-twitter-profile.herokuapp.com/" />
@@ -31,13 +31,13 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <h1>Embed Twitter Profile</h1>
+        <h1>TwEmbed: Embed Twitter Profile</h1>
       </header>
       
       <section class="text-info">
         <p>
           Hi There 👋,<br />
-          I am <a href="https://twitter.com/swastikjsdev" target="_blank">Swastik</a>,
+          I am <a href="https://twitter.com/swastikb380" target="_blank">Swastik</a>,
           I am glad to have you here 😊.
           I have created this tool to help you embed
           your Twitter profile in your personal websites.
@@ -57,23 +57,7 @@
       
       <footer>
         <div>
-          <p>If you found this tool useful. Please consider buying me a coffee.</p>
-          <br /><br />
-          <script
-            type="text/javascript"
-            src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
-            data-name="bmc-button"
-            data-slug="swastikyadav"
-            data-color="#FFDD00"
-            data-emoji=""
-            data-font="Comic"
-            data-text="Buy me a coffee"
-            data-outline-color="#000000"
-            data-font-color="#000000"
-            data-coffee-color="#ffffff" >
-          </script>
-          <br /><br />
-          <p>All rights reserved ©️ <a href="https://twitter.com/swastikjsdev">Swastik Yadav</a></p>
+          <p>Built with love by <a href="https://twitter.com/swastikb380" target="_blank">Swastik Yadav</a></p>
         </div>
       </footer>
     </div>
