add project discontinued message

--- a/client/index.html
+++ b/client/index.html
@@ -27,12 +27,27 @@
     <link rel="stylesheet" href="./stylesheets/snippet.css" />
     <link rel="stylesheet" href="./stylesheets/footer.css" />
     <link rel="stylesheet" href="./stylesheets/mediaQuery.css" />
+    <link rel ="stylesheet" href="./stylesheets/discontinued.css" />
   </head>
   <body>
     <div class="wrapper">
       <header class="header">
         <h1>TwEmbed: Embed Twitter Profile</h1>
       </header>
+
+      <div class="discontinued-message">
+        <p>
+          This project is <span class="label">discontinued</span> due to drastic changes in Twitter (X) APIs. The free version of the APIs 
+          have limited access now.
+          <br /><br />
+          I had a great time working on this project while it lasted.
+          <br><br />
+          If you are curious how it use to work. Check out this youtube video: 
+          <a href="https://www.youtube.com/watch?v=iV7Y5WS0n0E" target="_blank">
+            TwEmbed Demo
+          </a>
+        </p>
+      </div>
       
       <section class="text-info">
         <p>
